# python

./: .editorconfig  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  Pipfile  README.md  cspell.json  pyproject.toml  repo_env.ps1
build_exe/: build_exe.bat
src/: main.py
src/common/: my_shared_module.py
src/mypackage/: main.py
src/mypackage/common/: my_shared_module.py
